# oyucode

django-server/: db.sqlite3  pyproject.toml  sub.cpp
django-server/config/: settings.py  urls.py
django-server/core/: consts.py  models.py  serializers.py  urls.py  views.py
django-server/core/migrations/: 0001_initial.py  0002_rename_photo_baseuser_picture.py
django-server/users/: urls.py  views.py
nuxt-client/: README.md  nuxt.config.js  package.json
nuxt-client/assets/sass/: class.sass  colors.sass  effects.sass  global.sass  spacing.sass  test.sass  theme.sass  typography.sass
nuxt-client/assets/scss/: variables.scss
nuxt-client/components/: Test.vue  vue-codemirror.vue
nuxt-client/components/Landing/: Login.vue
nuxt-client/layouts/: AppBar.vue  AppFooter.vue  AppView.vue  default.vue
nuxt-client/layouts/Landing/: AppBar.vue  Company.vue  Detail.vue
nuxt-client/pages/: callback.vue  index.vue  problems.vue
nuxt-client/plugins/: codemirror-plugin.js  consts.js
